Fix test generator for Java 8